chore: more store refactorings + fix align self for records card

--- a/src/components/modules/Card.module.css
+++ b/src/components/modules/Card.module.css
@@ -9,6 +9,10 @@
 	align-self: var(--align-self);
 }
 
+.cardInfo {
+	align-self: var(--align-self);
+}
+
 .cardDescription {
 	color: var(--text-color-light);
 }
